FrontEnd Login and Profile view
